src/styles/app.less
@import '~antd/dist/antd.less'; // Import Ant Design styles by less entry
@import 'variables.less';
@import 'ant-override.less';

// Application Styling Variables
#root {
  height: 100%;
  font-size: 10px;
}
#kex-app {
  height: 100%;
  overflow: hidden;
}

html,
body {
  font-family: 'Roboto', sans-serif;
  font-size: 12px;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

/* width */
::-webkit-scrollbar {
  width: 1px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: grey;
  border-radius: 10px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
}
h1 {
  font-size: 2.4rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.6rem;
}
h4,
p.small {
  font-size: 1.2rem;
}
p {
  font-size: 1.4rem;
}

